# xdg-desktop-portal-hypr-remote

./: .gitignore  CMakeLists.txt  README.md  build.sh  org.freedesktop.impl.portal.desktop.hypr-remote.service.in  shell.nix  test_portal.sh  test_remote_desktop.py  test_virtual_input.cpp
data/: hypr-remote.portal  hyprland-remote-desktop.portal  org.freedesktop.impl.portal.desktop.hyprland.service.in
protocols/: virtual-keyboard-unstable-v1.xml  wlr-virtual-pointer-unstable-v1.xml
src/: libei_handler.cpp  libei_handler.h  main.cpp  portal.cpp  portal.h  wayland_virtual_keyboard.cpp  wayland_virtual_keyboard.h  wayland_virtual_pointer.cpp  wayland_virtual_pointer.h
